<resources>
    <string name="app_name">iTube</string>

    <!-- Labels for EditText hints -->
    <string name="youtube_url_input_description">Enter YouTube URL</string>
    <string name="email_input">Enter your email</string>
    <string name="password_input">Enter your password</string>
    <string name="full_name_input">Enter your full name</string>
    <string name="confirm_password_input">Confirm your password</string>

    <!-- Button texts -->
    <string name="play">Play</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="my_playlist">My Playlist</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>

    <!-- EditText hints -->
    <string name="youtube_url">YouTube URL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Misc -->
    <string name="playlist">Playlist</string>
</resources>
